form pad-bot fixed and linkedin title on mobile removed

--- a/src/Styles/Modules/Contact.sass
+++ b/src/Styles/Modules/Contact.sass
@@ -9,6 +9,7 @@
     flex-direction: column
     box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.35)
     border-radius: 24px
+    padding-bottom: 20px
   &_links
     display: flex
     padding: 8px
